version up to SpringBoot 4.x